added firefox support

--- a/src/bg/background.html
+++ b/src/bg/background.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<!-- 	<script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-app.js"></script>
-<script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-auth.js"></script>
-<script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-database.js"></script> -->
-<!-- <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-messaging.js"></script> -->
-
+<meta charset="UTF-8" />	
 <script type="text/javascript" src="../browser_action/bech32bundle.js"></script>
 <script type="text/javascript" src="../browser_action/sha.js"></script>
 <script type="text/javascript" src="../browser_action/elliptic.min.js"></script>
 <script type="text/javascript" src="../browser_action/buffer.js"></script>
-  <script type="text/javascript" src="background.js"></script>
+<script type="text/javascript" src="background.js"></script>
 </head>
 </html>
