--- a/src/browser_action/browser_action.html
+++ b/src/browser_action/browser_action.html
@@ -35,7 +35,7 @@
 		            <input type="password" id="password" placeholder="Password" />
 		        </div>
 		        <div class="pure-controls">
-		            <button type="button" class="pure-button pure-button-primary" id="login">Save Identity</button>
+		            <button type="submit" class="pure-button pure-button-primary" id="login">Save Identity</button>
 		        </div>
 		    </fieldset>
 		</form>
